--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-remote_user = user # -u user
+remote_user = user
 # private_key_file = ./k1
 roles_path = roles/:/home/z/.ansible/roles/
 stdout_callback = debug
